# FNALCore

./: CMakeLists.txt  README.md
CMake/cmake-cxx11/Modules/: CheckCXX11Features.cmake
FNALCore/: CMakeLists.txt  cetlib_module.cmake  cetlib_module_tests.cmake  cpp0x-config.in  cpp0x_module.cmake  cpp0x_module_tests.cmake  fhiclcpp_module.cmake  fhiclcpp_module_tests.cmake  messagefacility_module.cmake  messagefacility_module_tests.cmake
FNALCore/cetlib/: CMakeLists.txt  README.md  registry_via_id.h
FNALCore/cetlib/test/: value_ptr_test_2.cc
FNALCore/cetlib/unittests/: CMakeLists.txt  LibraryManager_t.sh.in  PluginFactory_t.cc  include_test.cc  includer_test.cc  value_ptr_test_2.cc
FNALCore/cpp0x/: CMakeLists.txt  README.md  dummy.cc
FNALCore/cpp0x/cpp0x/: compiler_macros.h
FNALCore/cpp0x/detail/: config.in
FNALCore/cpp0x/unittests/: .CMakeLists.txt.swp
FNALCore/cpp0x/ups/: product_deps
FNALCore/fhiclcpp/: CMakeLists.txt
FNALCore/fhiclcpp/test/: ParameterSet_t.cc
FNALCore/fhiclcpp/unittests/: CMakeLists.txt  save-restore_t.cc  traits_t.cc
FNALCore/messagefacility/: CMakeLists.txt  README.md
FNALCore/messagefacility/MessageLogger/: LoggedErrorsSummary.h  MessageFacilityMsg.h
FNALCore/messagefacility/MessageService/: ELtsErrorLog.icc  MessageLoggerScribe.h
FNALCore/messagefacility/messagefacility/MessageLogger/: MessageLogger.cc  MessageLogger.h
FNALCore/messagefacility/messagefacility/MessageService/: ELadministrator.cc  ELtsErrorLog.cc  ErrorLog.cc  MessageLoggerScribe.cc  MsgFormatSettings.cc
FNALCore/messagefacility/messagefacility/MessageService/plugins/: cerr_mfPlugin.cc  cerr_mfStatsPlugin.cc  cout_mfPlugin.cc  cout_mfStatsPlugin.cc  syslog_mfPlugin.cc
FNALCore/messagefacility/test/Integration/: MFTest.cc
FNALCore/messagefacility/test/Utilities/: CMakeLists.txt
FNALCore/messagefacility/unittests/: CMakeLists.txt
FNALCore/messagefacility/unittests/Integration/: CMakeLists.txt
FNALCore/messagefacility/unittests/Utilities/: CMakeLists.txt
Modules/: CheckCXX11Features.cmake
Modules/CheckCXX11Features/: cxx11-test-algorithm_copy_n.cpp  cxx11-test-functional_mem_fn.cpp  cxx11-test-map_emplace.cpp
Modules/CheckCXXStandardLibrary/: CheckCXXStdLib.cpp
cmake/: CetDummy.cmake  CetTest.cmake  FNALCoreCPack.cmake  FNALCoreConfig.cmake.in  cetlibConfig.cmake.in  cpp0xConfig.cmake.in  fhiclcppConfig.cmake.in  messagefacilityConfig.cmake.in
cmake/CheckCXX11Features/: CMakeLists.txt  FNALCPP0X.md  LICENSE.txt  README.md
cmake/CheckCXX11Features/Modules/: CheckCXX11Features.cmake  CheckCXXStandardLibrary.cmake
cmake/CheckCXX11Features/Modules/CheckCXX11Features/: cxx11-test-functional_bind.cpp  cxx11-test-vector_emplace.cpp
doc/: CMakeLists.txt  FNALCore.doxyfile.in
ups/: product_deps
